--- a/src/views/listPages.html
+++ b/src/views/listPages.html
@@ -5,7 +5,7 @@
             <b>下拉刷新...</b>
         </div>
         <header>
-            <a href="#/index/home/selectCarefully"></a>
+            <a class="goBack" href="#"></a>
             <span>预售主粮专区分会场</span>
             <a href="#"></a>
         </header>
