--- a/dev/styles/app.css
+++ b/dev/styles/app.css
@@ -741,12 +741,12 @@ body {
   display: flex;
   flex-direction: column; }
 
-.container main {
+.container > main {
   flex: 1;
   overflow-y: auto;
   height: 1000px; }
 
-.container > header {
+.container > main > header {
   position: fixed;
   width: 100%;
   height: 0.99rem;
@@ -757,30 +757,30 @@ body {
   margin: 0 auto;
   background: transparent; }
 
-.container > header .search {
+.container > main > header .search {
   height: 30px;
   line-height: 30px;
   margin-top: 25px;
   display: flex;
   padding: 0 15px; }
 
-.container > header .search a:nth-child(1) {
+.container > main > header .search a:nth-child(1) {
   display: block;
   background: rgba(255, 255, 255, 0.8);
   border-radius: 30px;
   margin-right: 15px;
   flex: 1; }
 
-.container > header .search a:nth-child(1) img {
+.container > main > header .search a:nth-child(1) img {
   width: 10px;
   vertical-align: middle;
   margin-left: 15px; }
 
-.container > header .search a:nth-child(1) span {
+.container > main > header .search a:nth-child(1) span {
   color: #666;
   font-size: 12px; }
 
-.container > header .search a:nth-child(2) {
+.container > main > header .search a:nth-child(2) {
   display: block;
   width: 25px;
   height: 25px;
@@ -788,36 +788,36 @@ body {
   background: url(../images/index/message.png) no-repeat;
   background-size: 100%; }
 
-.container > header > nav {
+.container > main > header > nav {
   height: 44px;
   line-height: 44px; }
 
-.container > header > nav > ul {
+.container > main > header > nav > ul {
   height: 100%;
   display: flex; }
 
-.container > header > nav > ul > li {
+.container > main > header > nav > ul > li {
   flex: 0 0 22%;
   text-align: center; }
 
-.container > header > nav > ul > li a {
+.container > main > header > nav > ul > li a {
   color: #fff;
   font-size: 14px; }
 
-.container > header > nav > ul > li.active a {
+.container > main > header > nav > ul > li.active a {
   font-size: 20px;
   font-weight: 700; }
 
-.container > header.fixed {
+.container > main > header.fixed {
   background: #fff; }
 
-.container > header.fixed nav > ul > li a {
+.container > main > header.fixed nav > ul > li a {
   color: #333333; }
 
-.container > header .search a:nth-child(1) {
-  background: #f7f7f7; }
+.container > main > header .search a:nth-child(1) {
+  background: rgba(255, 255, 255, 0.8); }
 
-.container > header.fixed .search a:nth-child(2) {
+.container > main > header.fixed .search a:nth-child(2) {
   background: url(../images/index/message2.png) no-repeat;
   background-size: 100%; }
 
@@ -1152,3 +1152,239 @@ html {
           text-align: center;
           color: #fff;
           font-size: 0.12rem; }
+
+body {
+  background: #f4f5f7; }
+
+.searchBox {
+  display: flex;
+  flex-direction: column; }
+  .searchBox header {
+    display: flex;
+    padding: 0.07rem 0.12rem;
+    background: #fff; }
+    .searchBox header > .goBack {
+      width: 0.16rem;
+      height: 0.16rem;
+      margin-top: 0.08rem;
+      border-top: 1px solid #999;
+      border-left: 1px solid #999;
+      -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+      -o-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      transform: rotate(-45deg); }
+    .searchBox header > div {
+      flex: 1;
+      height: 0.35rem;
+      line-height: 0.35rem;
+      background: #f6f6f6;
+      padding: 0 0.1rem; }
+      .searchBox header > div input {
+        width: 90%;
+        border: none;
+        background: #f6f6f6;
+        height: 0.35rem;
+        line-height: 0.35rem;
+        font-size: 0.14rem; }
+      .searchBox header > div label img {
+        height: 0.16rem;
+        margin-top: -0.02rem; }
+    .searchBox header > a.searchBtn {
+      line-height: 0.32rem;
+      margin-left: 0.05rem;
+      color: #333;
+      font-size: 0.16rem; }
+  .searchBox main {
+    flex: 1; }
+    .searchBox main .boutiqueRecommend p {
+      background: #fbfbfd;
+      height: 0.3rem;
+      line-height: 0.3rem;
+      padding-left: 0.12rem;
+      color: #666; }
+      .searchBox main .boutiqueRecommend p img {
+        height: 0.2rem;
+        margin: -0.02rem 0.05rem 0 0; }
+    .searchBox main .boutiqueRecommend ul {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 0 0.12rem 0.23rem; }
+      .searchBox main .boutiqueRecommend ul li a {
+        display: block;
+        padding: 0.03rem 0.1rem;
+        margin: 0.1rem 0.1rem 0 0;
+        color: #999;
+        font-size: 0.12rem;
+        border-radius: 0.15rem;
+        background: #fff; }
+    .searchBox main .recently p {
+      background: #fbfbfd;
+      height: 0.3rem;
+      line-height: 0.3rem;
+      padding-left: 0.12rem;
+      color: #666; }
+      .searchBox main .recently p img {
+        height: 0.2rem;
+        margin: -0.02rem 0.05rem 0 0; }
+    .searchBox main .recently ul {
+      padding-left: 0.12rem;
+      background: #fff; }
+      .searchBox main .recently ul li a {
+        display: block;
+        border-bottom: 1px solid #d7d7d7;
+        line-height: 0.4rem;
+        font-size: 0.12rem;
+        color: #333; }
+      .searchBox main .recently ul li:last-child a {
+        border-bottom: none; }
+    .searchBox main .clearHistory {
+      width: 60%;
+      margin: 0.4rem auto 0.6rem;
+      line-height: 0.4rem;
+      font-size: 0.15rem;
+      border: 1px solid #777;
+      border-radius: 0.05rem;
+      text-align: center; }
+
+.searchListPages {
+  background: #fff;
+  overflow-y: scroll;
+  height: 100%; }
+  .searchListPages header {
+    height: 0.5rem;
+    line-height: 0.5rem;
+    position: relative;
+    background: #fff;
+    display: flex; }
+    .searchListPages header::after {
+      pointer-events: none;
+      position: absolute;
+      z-index: 999;
+      top: 0;
+      left: 0;
+      content: "\0020";
+      border-color: #f3f3f3;
+      border-style: solid;
+      border-width: 0 0 1px 0;
+      -webkit-transform-origin: 0 0;
+      transform-origin: 0 0; }
+      @media (max--moz-device-pixel-ratio: 1.49), (-webkit-max-device-pixel-ratio: 1.49), (max-device-pixel-ratio: 1.49), (max-resolution: 143dpi), (max-resolution: 1.49dppx) {
+        .searchListPages header::after {
+          width: 100%;
+          height: 100%; } }
+      @media (min--moz-device-pixel-ratio: 1.5) and (max--moz-device-pixel-ratio: 2.49), (-webkit-min-device-pixel-ratio: 1.5) and (-webkit-max-device-pixel-ratio: 2.49), (min-device-pixel-ratio: 1.5) and (max-device-pixel-ratio: 2.49), (min-resolution: 144dpi) and (max-resolution: 239dpi), (min-resolution: 1.5dppx) and (max-resolution: 2.49dppx) {
+        .searchListPages header::after {
+          width: 200%;
+          height: 200%;
+          -webkit-transform: scale(0.5);
+          transform: scale(0.5); } }
+      @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+        .searchListPages header::after {
+          width: 300%;
+          height: 300%;
+          -webkit-transform: scale(0.33333);
+          transform: scale(0.33333); } }
+    .searchListPages header a {
+      background: url(../images/listPages/topIco.png) 0 0 no-repeat;
+      background-size: 0.35rem auto; }
+    .searchListPages header a:first-child {
+      width: 0.35rem;
+      height: 0.35rem;
+      margin: 0.07rem 0 0 0.05rem; }
+    .searchListPages header span {
+      flex: 1;
+      text-align: center;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      font-size: 0.18rem; }
+    .searchListPages header a:last-child {
+      width: 0.35rem;
+      height: 0.35rem;
+      background-position: 0 -0.7rem;
+      margin: 0.07rem 0.05rem 0 0; }
+  .searchListPages main .searchBox {
+    margin: 0.1rem;
+    padding: 0 0.1rem;
+    background: #f6f6f6;
+    height: 0.4rem;
+    line-height: 0.4rem;
+    border-radius: 0.05rem; }
+    .searchListPages main .searchBox a {
+      display: flex; }
+      .searchListPages main .searchBox a img {
+        width: 0.15rem;
+        height: 0.15rem;
+        margin: 0.13rem 0 0 0.06rem; }
+      .searchListPages main .searchBox a input {
+        height: 0.4rem;
+        border-radius: 0.03rem;
+        border: none;
+        background: #f6f6f6;
+        font-family: "Microsoft Yahei", tahoma, arial;
+        width: 90%;
+        text-indent: 0.5rem; }
+  .searchListPages main ul li {
+    padding: 0.1rem;
+    position: relative; }
+    .searchListPages main ul li::after {
+      pointer-events: none;
+      position: absolute;
+      z-index: 999;
+      top: 0;
+      left: 0;
+      content: "\0020";
+      border-color: #e7e7e7;
+      border-style: solid;
+      border-width: 0 0 1px 0;
+      -webkit-transform-origin: 0 0;
+      transform-origin: 0 0; }
+      @media (max--moz-device-pixel-ratio: 1.49), (-webkit-max-device-pixel-ratio: 1.49), (max-device-pixel-ratio: 1.49), (max-resolution: 143dpi), (max-resolution: 1.49dppx) {
+        .searchListPages main ul li::after {
+          width: 100%;
+          height: 100%; } }
+      @media (min--moz-device-pixel-ratio: 1.5) and (max--moz-device-pixel-ratio: 2.49), (-webkit-min-device-pixel-ratio: 1.5) and (-webkit-max-device-pixel-ratio: 2.49), (min-device-pixel-ratio: 1.5) and (max-device-pixel-ratio: 2.49), (min-resolution: 144dpi) and (max-resolution: 239dpi), (min-resolution: 1.5dppx) and (max-resolution: 2.49dppx) {
+        .searchListPages main ul li::after {
+          width: 200%;
+          height: 200%;
+          -webkit-transform: scale(0.5);
+          transform: scale(0.5); } }
+      @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+        .searchListPages main ul li::after {
+          width: 300%;
+          height: 300%;
+          -webkit-transform: scale(0.33333);
+          transform: scale(0.33333); } }
+    .searchListPages main ul li > a {
+      display: flex; }
+      .searchListPages main ul li > a > img {
+        width: 1rem;
+        height: 1rem; }
+      .searchListPages main ul li > a > div {
+        flex: 1;
+        position: relative;
+        margin-left: 0.1rem; }
+        .searchListPages main ul li > a > div h1 {
+          font-size: 0.12rem;
+          height: 0.32rem;
+          overflow: hidden;
+          line-height: 0.16rem;
+          margin-bottom: 0.3rem;
+          color: #333;
+          font-weight: 400; }
+        .searchListPages main ul li > a > div .price {
+          font-size: 14px;
+          color: #ff5757; }
+        .searchListPages main ul li > a > div .interaction {
+          font-size: 12px;
+          color: #999; }
+          .searchListPages main ul li > a > div .interaction span:last-child {
+            margin-left: 5px; }
+        .searchListPages main ul li > a > div .cartIcon {
+          position: absolute;
+          bottom: 0;
+          right: 0.1rem;
+          width: 0.3rem; }
+          .searchListPages main ul li > a > div .cartIcon img {
+            width: 100%; }
