添加详情页

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,5 @@
 @import './yo/usage/core/reset.scss';
 @import './modules/index/laylout.scss';
 @import './modules/listPages/listPages.scss';
-@import './modules/search/search.scss'
+@import './modules/search/search.scss';
+@import './modules/details/details.scss';
