--- a/src/views/details.html
+++ b/src/views/details.html
@@ -1,5 +1,64 @@
-<div class="m-detail">
-  <section>
-    详情页 - {{id}}
-  </section>
+<div class="details">
+  <div>
+    <img src="//img1.epetbar.com/2017-03/13/10/393a161624bd4bc6d80cf25c1eea061e.jpg@!water" alt="">
+  </div>
+  <div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3cba202094d8fd801591a46e235acbfc.jpg@300y-0ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3cba202094d8fd801591a46e235acbfc.jpg@300y-1ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3cba202094d8fd801591a46e235acbfc.jpg@300y-2ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3cba202094d8fd801591a46e235acbfc.jpg@300y-3ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3cba202094d8fd801591a46e235acbfc.jpg@300y-4ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3cba202094d8fd801591a46e235acbfc.jpg@300y-5ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3cba202094d8fd801591a46e235acbfc.jpg@300y-7ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3cba202094d8fd801591a46e235acbfc.jpg@300y-8ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3cba202094d8fd801591a46e235acbfc.jpg@300y-9ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3f47493db7598f53187c19e186f817ed.jpg@300y-0ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3f47493db7598f53187c19e186f817ed.jpg@300y-1ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-12/11/19/3f47493db7598f53187c19e186f817ed.jpg@300y-2ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-10/23/17/5938121ecf9dc6cb6c818e5b1b4ccfb0.jpg@300y-0ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-10/23/17/5938121ecf9dc6cb6c818e5b1b4ccfb0.jpg@300y-2ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-10/23/17/5938121ecf9dc6cb6c818e5b1b4ccfb0.jpg@300y-3ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-10/23/17/5938121ecf9dc6cb6c818e5b1b4ccfb0.jpg@300y-4ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-10/23/17/5938121ecf9dc6cb6c818e5b1b4ccfb0.jpg@300y-5ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-10/23/17/5938121ecf9dc6cb6c818e5b1b4ccfb0.jpg@300y-6ic" alt="">
+    </div>
+    <div>
+      <img src="https://img2.epetbar.com/2018-10/23/17/5938121ecf9dc6cb6c818e5b1b4ccfb0.jpg@300y-7ic" alt="">
+    </div>
+  </div>
 </div>
