--- a/src/views/home.html
+++ b/src/views/home.html
@@ -3,7 +3,7 @@
   <nav>
     <ul>
       <li><a href="#/index/home/selectCarefully"></a></li>
-      <li><a href="#/index/home/classification"></a></li>
+      <li><a href="#/index/listPages"></a></li>
       <li><a href="#/index/home/littleCuteBook"></a></li>
       <li><a href="#/index/home/cart"></a></li>
       <li><a href="#/index/home/profile"></a></li>
