--- a/src/views/selectCarefully.html
+++ b/src/views/selectCarefully.html
@@ -8,7 +8,7 @@
         </div>
         <nav>
                 <ul>
-                        <li class="active"><a href="#/index/listPages">精选</a></li>
+                        <li class="active"><a href="#">精选</a></li>
                         <li><a href="#">美味零食</a></li>
                         <li><a href="#">进口狗粮</a></li>
                         <li><a href="#">国产狗粮</a></li>
