--- a/dev/styles/app.css
+++ b/dev/styles/app.css
@@ -928,7 +928,7 @@ body {
 .swiper-container-horizontal > .swiper-pagination-bullets {
   bottom: 15%; }
 
-.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+.banner .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
   width: 6px;
   height: 6px;
   border: 1px solid #fff;
@@ -940,7 +940,7 @@ body {
   -o-transition: all 0.25s ease;
   -ms-transition: all 0.25s ease; }
 
-.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet-active {
+.banner .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet-active {
   background: #fff;
   width: 16px;
   border-radius: 30px; }
@@ -1327,7 +1327,8 @@ body {
         text-indent: 0.5rem; }
   .searchListPages main ul li {
     padding: 0.1rem;
-    position: relative; }
+    position: relative;
+    display: flex; }
     .searchListPages main ul li::after {
       pointer-events: none;
       position: absolute;
@@ -1356,35 +1357,220 @@ body {
           height: 300%;
           -webkit-transform: scale(0.33333);
           transform: scale(0.33333); } }
-    .searchListPages main ul li > a {
-      display: flex; }
-      .searchListPages main ul li > a > img {
-        width: 1rem;
-        height: 1rem; }
-      .searchListPages main ul li > a > div {
-        flex: 1;
-        position: relative;
-        margin-left: 0.1rem; }
-        .searchListPages main ul li > a > div h1 {
-          font-size: 0.12rem;
-          height: 0.32rem;
-          overflow: hidden;
-          line-height: 0.16rem;
-          margin-bottom: 0.3rem;
+    .searchListPages main ul li > img {
+      width: 1rem;
+      height: 1rem; }
+    .searchListPages main ul li > div {
+      flex: 1;
+      position: relative;
+      margin-left: 0.1rem; }
+      .searchListPages main ul li > div h1 {
+        font-size: 0.12rem;
+        height: 0.32rem;
+        overflow: hidden;
+        line-height: 0.16rem;
+        margin-bottom: 0.3rem;
+        color: #333;
+        font-weight: 400; }
+      .searchListPages main ul li > div .price span:first-child {
+        font-size: 14px;
+        color: #ff5757; }
+      .searchListPages main ul li > div .price span:last-child {
+        margin-left: 0.07rem;
+        font-size: 0.12rem;
+        color: #999; }
+      .searchListPages main ul li > div .interaction {
+        font-size: 12px;
+        color: #999; }
+        .searchListPages main ul li > div .interaction span:last-child {
+          margin-left: 5px; }
+      .searchListPages main ul li > div .cartIcon {
+        position: absolute;
+        bottom: 0;
+        right: 0.1rem;
+        width: 0.3rem; }
+        .searchListPages main ul li > div .cartIcon img {
+          width: 100%; }
+
+.m-details {
+  background: #f3f4f5;
+  height: 100%;
+  display: flex;
+  flex-direction: column; }
+  .m-details header {
+    height: 0.5rem;
+    line-height: 0.5rem;
+    position: relative;
+    background: #fff;
+    display: flex; }
+    .m-details header::after {
+      pointer-events: none;
+      position: absolute;
+      z-index: 999;
+      top: 0;
+      left: 0;
+      content: "\0020";
+      border-color: #f3f3f3;
+      border-style: solid;
+      border-width: 0 0 1px 0;
+      -webkit-transform-origin: 0 0;
+      transform-origin: 0 0; }
+      @media (max--moz-device-pixel-ratio: 1.49), (-webkit-max-device-pixel-ratio: 1.49), (max-device-pixel-ratio: 1.49), (max-resolution: 143dpi), (max-resolution: 1.49dppx) {
+        .m-details header::after {
+          width: 100%;
+          height: 100%; } }
+      @media (min--moz-device-pixel-ratio: 1.5) and (max--moz-device-pixel-ratio: 2.49), (-webkit-min-device-pixel-ratio: 1.5) and (-webkit-max-device-pixel-ratio: 2.49), (min-device-pixel-ratio: 1.5) and (max-device-pixel-ratio: 2.49), (min-resolution: 144dpi) and (max-resolution: 239dpi), (min-resolution: 1.5dppx) and (max-resolution: 2.49dppx) {
+        .m-details header::after {
+          width: 200%;
+          height: 200%;
+          -webkit-transform: scale(0.5);
+          transform: scale(0.5); } }
+      @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+        .m-details header::after {
+          width: 300%;
+          height: 300%;
+          -webkit-transform: scale(0.33333);
+          transform: scale(0.33333); } }
+    .m-details header > a {
+      background: url(../images/listPages/topIco.png) 0 0 no-repeat;
+      background-size: 0.35rem auto; }
+    .m-details header > a:first-child {
+      width: 0.35rem;
+      height: 0.35rem;
+      margin: 0.07rem 0 0 0.05rem; }
+    .m-details header > a:last-child {
+      width: 0.35rem;
+      height: 0.35rem;
+      background-position: 0 -0.7rem;
+      margin: 0.07rem 0.05rem 0 0; }
+    .m-details header nav {
+      flex: 1;
+      text-align: center;
+      font-size: 0.18rem; }
+      .m-details header nav ul {
+        display: flex;
+        justify-content: center; }
+        .m-details header nav ul li a {
           color: #333;
-          font-weight: 400; }
-        .searchListPages main ul li > a > div .price {
-          font-size: 14px;
-          color: #ff5757; }
-        .searchListPages main ul li > a > div .interaction {
-          font-size: 12px;
-          color: #999; }
-          .searchListPages main ul li > a > div .interaction span:last-child {
-            margin-left: 5px; }
-        .searchListPages main ul li > a > div .cartIcon {
-          position: absolute;
-          bottom: 0;
-          right: 0.1rem;
-          width: 0.3rem; }
-          .searchListPages main ul li > a > div .cartIcon img {
-            width: 100%; }
+          margin: 0 0.03rem;
+          padding-bottom: 0.13rem; }
+        .m-details header nav ul li.active {
+          border-bottom: 0.02rem solid #f03e3e; }
+  .m-details > main {
+    overflow-y: auto; }
+
+.good main {
+  flex: 1;
+  overflow-y: auto; }
+  .good main .detailsBanner img {
+    width: 100%; }
+  .good main .info {
+    background: #fff;
+    padding: 0 0.1rem 0.1rem;
+    margin-bottom: 0.1rem; }
+    .good main .info > p:nth-child(1) {
+      font-size: 0.13rem;
+      color: #333333; }
+    .good main .info > p:nth-child(2) {
+      font-size: 0.12rem;
+      color: #e75656; }
+    .good main .info > div {
+      display: flex;
+      margin-top: 0.1rem;
+      border-top: #e5e5e5 solid 1px; }
+      .good main .info > div > span {
+        flex: 1;
+        font-size: 0;
+        color: #ea5858; }
+        .good main .info > div > span span:nth-child(1) {
+          font-size: 0.12rem; }
+        .good main .info > div > span span:nth-child(2) {
+          font-size: 0.2rem;
+          margin-right: 0.1rem; }
+        .good main .info > div > span span:nth-child(3) {
+          font-size: 0.12rem;
+          color: #333;
+          text-decoration: line-through; }
+      .good main .info > div > a {
+        align-self: flex-end; }
+        .good main .info > div > a img {
+          height: 0.25rem; }
+  .good main .cartDetails {
+    background: #fff;
+    padding: 0.1rem;
+    display: flex;
+    align-items: center; }
+    .good main .cartDetails > span {
+      width: 20%;
+      color: #333; }
+    .good main .cartDetails > div {
+      font-size: 0.2rem;
+      color: #999;
+      border: 1px solid #999;
+      border-radius: 0.05rem;
+      display: flex; }
+      .good main .cartDetails > div span {
+        width: 0.3rem;
+        height: 0.3rem;
+        text-align: center;
+        line-height: 0.28rem; }
+      .good main .cartDetails > div span:first-child {
+        border-right: 1px solid #999; }
+      .good main .cartDetails > div input {
+        border: none;
+        text-align: center;
+        width: 0.48rem;
+        height: 0.3rem;
+        font-size: 0.18rem;
+        color: #f03e3e; }
+      .good main .cartDetails > div span:last-child {
+        border-left: 1px solid #999; }
+
+.good > footer {
+  height: 0.5rem;
+  background: #f5f6f8;
+  display: flex; }
+  .good > footer > div:first-child {
+    flex: 1;
+    display: flex; }
+    .good > footer > div:first-child a {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center; }
+      .good > footer > div:first-child a i {
+        background-image: url(../images/details/s1.png);
+        width: 0.2rem;
+        height: 0.19rem;
+        background-position: 0 -0.2rem;
+        background-size: 100%;
+        margin: 0.05rem; }
+      .good > footer > div:first-child a > span {
+        color: #999;
+        font-size: 12px; }
+    .good > footer > div:first-child a:last-child i {
+      background-image: url(../images/details/car.png);
+      position: relative; }
+      .good > footer > div:first-child a:last-child i span {
+        position: absolute;
+        padding: 0.02rem 0.04rem;
+        top: -0.03rem;
+        right: -60%;
+        border-radius: 0.08rem;
+        background: #f03e3e;
+        color: #fff;
+        font-size: 12px;
+        line-height: 1; }
+  .good > footer > .addCartBtn {
+    color: #fff;
+    height: 0.5rem;
+    width: 50%;
+    background-color: #f03e3e;
+    line-height: 0.5rem;
+    text-align: center;
+    cursor: pointer;
+    font-size: 0.15rem; }
+
+.details img {
+  width: 100%; }
